fix: progress bar color in dark mode
Resolves https://kolaente.dev/vikunja/frontend/issues/2194

--- a/src/styles/custom-properties/colors.scss
+++ b/src/styles/custom-properties/colors.scss
@@ -245,6 +245,7 @@
   --border: var(--grey-200);
   --input-disabled-background-color: var(--grey-100);
   --input-disabled-border-color: var(--grey-300);
+  --progress-value-background-color: var(--grey-500);
   // END Overrides of Bulma defaults
 
 
